TAG: lib_py_report-6-0-18-2
DATE: 03/07/2022
STAFF: lec
wts2-703/new Noctua -> GO Annotation pipeline

TAG: lib_py_report-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG: lib_py_report-6-0-12-1
DATE: 04/06/2018
STAFF: lec 
CHANGES: 
TR12834/go_annot_extensions.py/add 'model-state' to excluded set

TAG: lib_py_report-6-0-11-2
TAG: lib_py_report-6-0-11-1
DATE: 10/31/2017
STAFF: lec 
CHANGES: 
TR12664/go_annot_extensions/noctua-model-id

TAG: lib_py_reprot-6-0-7-2
DATE: 1/18/2017
STAFF: dbm
CHANGES:
1) Conversion to github

TAG: lib_py_report-6-0-7-1
DATE: 11/1/2016
STAFF: sc
CHANGES: Merge tr12069 branch to trunk

TAG: lib_py_report-tr12069-1
DATE: 11/21/2016
STAFF: sc
CHANGES: go_annot_extensions.py removed setAutoTranslate*

TAG: lib_py_report-tr12069-BP
DATE: 11/21/2016
STAFF: sc
CHANGES: Branch Point tag

TAG: lib_py_report-6-0-6-1
DATE: 09/08/2016
STAFF: lec
CHANGES:
TR12349/gone-dor & more 
TR12345/GPAD/GPI
1) go_annot_extensions.py : add more properties to exclude list

TAG: lib_py_report-6-0-4-2
TAG: lib_py_reports-6-0-4-1
DATE: 04/29/2016
STAFF: lec
CHANGES: TR12069/postgres cleanup
1) convert to Git
2) add "db.setAutoTranslate"

TAG: lib_py_report-6-0-2-1
DATE: 12/08/2015
STAFF: kstone

TAG: lib_py_report-6-0-1-1
DATE: 11/03/2015
STAFF: kstone
CHANGES:
1) TR12070 - GO annotation extensions
2) GO isoforms

TAG:  lib_py_report-6-0-1-?
DATE: 10/19/2015
STAFF: lec
CHANGES:
1) TR12124/column 17/go_isoforms.py

TAG:  lib_py_report-6-0-0-2
TAG:  lib_py_report-6-0-0-1
DATE: 07/22/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG:  lib_py_report-5-2-2-1
DATE: 07/06/2015
STAFF: dbm
CHANGES:
1) reportlib.py: Always use findmice URL for IMSR link

TAG:  lib_py_report-5-0-0-4
DATE: 05/31/2012
STAFF: lec
CHANGES:
1) TR11094/create_accession_anchor

TAG:  lib_py_report-5-0-0-3
DATE: 04/11/2012
STAFF: lec
CHANGES:
1) TR11027; changes for MGI 5.0: fix
create_accession_anchor
create_imsrstrain_anchor
2) postgres options added
